# immanuel-python

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  TRANSIT_FEATURE_PRD.md  asc_desc_aspect_testbed.py  astrocartography_worldmap.py  intensity_curves_example.py  pyproject.toml  test_asc_desc_aspects.py  test_astrocartography_aspects.py  test_parans.py  transit_example.py  verify_aspect_coordinates.py
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
docs/: 0-contents.md  1-overview.md  2-installation.md  3-examples.md  4-data.md  5-calculations.md  5-settings.md  6-settings.md  6-submodules.md  7-contributions.md  7-submodules.md  PARAN_INVESTIGATION_SUMMARY.md  TRANSIT_INTENSITY_CURVES_PRD.md  in_mundo_asc_desc_implementation.md
immanuel/: __init__.py  chart.py  charts.py  options.py  setup.py  wrappers.py
immanuel/classes/: astrocartography_entities.py  cache.py  localize.py  serialize.py  transit_events.py  types.py  wrap.py
immanuel/const/: astrocartography.py  calc.py  chart.py  data.py  dignities.py  genders.py  names.py  transits.py
immanuel/data/: aspect.py
immanuel/items/: aspect.py  dignity.py  pattern.py  report.py
immanuel/locales/: immanuel.pot
immanuel/locales/de_DE/: mappings.py
immanuel/locales/de_DE/LC_MESSAGES/: immanuel.mo  immanuel.po  mappings.py
immanuel/locales/es_ES/: mappings.py
immanuel/locales/es_ES/LC_MESSAGES/: immanuel.mo  immanuel.po
immanuel/locales/pt_BR/: mappings.py
immanuel/locales/pt_BR/LC_MESSAGES/: immanuel.mo  immanuel.po
immanuel/objects/: aspect.py  dignity.py  pattern.py  report.py
immanuel/reports/: aspect.py  dignity.py  pattern.py  weighting.py
immanuel/tools/: aspect.py  astrocartography.py  calculate.py  convert.py  date.py  dates.py  dignity.py  eph.py  ephemeris.py  find.py  forecast.py  midpoint.py  names.py  pattern.py  position.py  report.py  serialize.py  transit.py  transit_search.py
locales/: immanuel.pot
locales/es_ES/: mappings.py
locales/es_ES/LC_MESSAGES/: immanuel.po
locales/pt_BR/: genders.py
locales/pt_BR/LC_MESSAGES/: immanuel.mo  immanuel.po
profiling/: README.md  fuzz_test_astrocartography.py  test_parans.py
specs/001-astrocartogrphy-module-with/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-astrocartogrphy-module-with/contracts/: astrocartography_calculator.py  astrocartography_chart.py
tests/: se01181s.se1  test_aspect.py  test_astrocartography_calculator_contract.py  test_astrocartography_chart_contract.py  test_astrocartography_edge_cases.py  test_astrocartography_integration.py  test_astrocartography_lines.py  test_astrocartography_performance.py  test_astrocartography_zenith.py  test_calculate.py  test_charts.py  test_convert.py  test_date.py  test_dignity.py  test_eph.py  test_ephemeris.py  test_find.py  test_forecast.py  test_intensity_curves.py  test_localization.py  test_midpoint.py  test_pattern.py  test_position.py  test_setup.py  test_transit.py  test_transits.py  test_weighting.py
