[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "immanuel"
version = "1.5.2"
description = "Quickly produce both human-readable and JSON-formatted astrology chart data based on the Swiss Ephemeris and astro.com."
authors = [
  { name = "Robert Davies", email = "robert@theriftlab.com" },
]
license-files = ["LICENSE.md"]
readme = "README.md"
keywords = ["astrology", "api", "pyswisseph", "swisseph", "swiss ephemeris", "astro.com", "astro gold"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "pyswisseph~=2.10",
    "python-dateutil",
    "timezonefinder~=5.2",
    "pytest",
]

[project.urls]
"Homepage" = "https://github.com/theriftlab/immanuel-python"
"Documentation" = "https://github.com/theriftlab/immanuel-python/blob/master/docs/1-overview.md"
"Bug Tracker" = "https://github.com/theriftlab/immanuel-python/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --tb=short --strict-markers"
markers = [
    "astrocartography: marks tests as astrocartography module tests",
    "performance: marks tests as performance tests",
    "integration: marks tests as integration tests",
    "contract: marks tests as contract/API tests",
]
# Coverage configuration for astrocartography module
# Target 90% coverage per constitutional requirements
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.setuptools]
packages = ["immanuel"]
